--- a/src/css/sass/variables.scss
+++ b/src/css/sass/variables.scss
@@ -4,13 +4,16 @@ $fuente-principal: 'SegoePro', sans-serif;
 
 /*COLORES*/
 $color-blanco: #fff;
+$light-blue: #94c9ff;
 
 
 
 /* GRADIENTES */
 $gradient-light-blue: linear-gradient(to right, #34a4dc, #328cd0);
 
-
+$main-padding-left-dk: 7.81vw;
+$main-padding-left-mb: 5.6vw;
+$main-padding-left-xl: 100px;
 
 /*GRID OPTIONS*/
 //320px es el menor
